packages/webassemblyjs/test/fixtures/conversions/type-errors/convert_u-f32-i64/module.wast
(module (func (result f32) (f32.convert_u/i64 (i32.const 0))))
